--- a/views/landing/index.pug
+++ b/views/landing/index.pug
@@ -21,8 +21,8 @@ html(lang="en")
                         h4 "Be knowledgeable! 
                         h4 Join interesting Clubs"
                     .btn-box
-                        a.btn.btn-login(href='/signup') Sign Up
-                        a.btn.btn-signup(href='/login') Login
+                        a.btn.btn-signup(href='/signup') Sign Up
+                        a.btn.btn-login(href='/login') Login
                 
 
         footer.footer
