--- a/public/css/club.css
+++ b/public/css/club.css
@@ -15,9 +15,6 @@ a{
     border-bottom: 1px solid black;
     box-shadow: 0px 2px 15px black;
 }
-main{
-    height: 600px;
-}
 nav{
     padding: 0 50px;
     margin-left: auto;
@@ -119,6 +116,7 @@ nav ul li a:hover{
 .club-card{
     min-width: 250px;
     display: flex;
+    margin: 0 20px;
     border: 0px solid black;
     border-radius: 15px;
     box-shadow: 3px 3px 14px rgb(177 251 255);
@@ -148,6 +146,77 @@ nav ul li a:hover{
 .club-card a{
     margin:23px auto;
 }
+
+
+/*Admin CSS*/
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+ 
+  
+ 
+.club-admin-container{
+    margin: 17px 15px;
+    border: 2px solid black;
+    border-radius: 15px;
+    min-height: 400px;
+    padding: 20px 30px;
+}
+.club-admin-container h1{
+    text-align: center;
+    color: red;
+    margin: 20px;
+}
+.admin-head{
+    display: flex;
+    margin: 12px auto;
+    font-size: 2rem;
+    justify-content: space-evenly;
+    color:red;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.form-heading{
+    text-align: center;
+    margin: 30px 0;
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+.form-box{
+    width: 500px;
+    margin: 0px auto;
+    background-color: white;
+    border-radius: 0 60px 0 60px;
+    padding: 5px 30px;
+}
+.input-box{
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    
+}
+.input-box input,.input-box select{
+    padding: 5px 7px;
+    width: 100%;
+    margin: 5px 0;
+    outline: none;
+    font-size: 1.1rem;
+    border: none;
+    border-bottom: 2px solid black;
+}
+textarea{
+    padding: 5px 7px;
+}
+
+
 
 .footer{
     display: flex;
