--- a/views/admin/createClub.pug
+++ b/views/admin/createClub.pug
@@ -8,6 +8,7 @@ html(lang="en")
         style 
             include ./../../public/css/club.css
             include ./../../public/util.css
+            include ./../../public/css/header.css
     body 
         header.header 
             img(src="../Logo.png", alt="Logo" class="logo")
@@ -24,8 +25,8 @@ html(lang="en")
             .dropdown 
                 div.account.drop-btn 
                 div.dropdown-content 
-                    a.dropdown-item(href="account") Account 
-                    a.dropdown-item(href="account/setting") Setting 
+                    a.dropdown-item(href="users/account") Account 
+                    a.dropdown-item(href="users/account/setting") Setting 
                     a.dropdown-item(href="/logout") Logout 
                     if user.role == "Teacher"
                         a.dropdown-item(href="/admin") Administration 
@@ -56,7 +57,7 @@ html(lang="en")
                                 label(for="tag") 
                                 select(name="tag")
                                     option(value) -------------Select Club Type------------  
-                                    option(value="Technical ")  Technical   
+                                    option(value="Technical")  Technical   
                                     option(value="Non Technical") Non Technical
                                     option(value="Cultural") Cultural    
                                     option(value="Sports") Sports    
