--- a/public/css/header.css
+++ b/public/css/header.css
@@ -7,10 +7,27 @@ a{
     text-decoration: none;
 }
 .err-msg{
-    padding: 20px 40px;
-    background-color: red;
-    color: white;
+    padding: 10px 40px;
+  background-color: red;
+  color: white;
+  position: relative;
 }
+.done-msg{
+    padding: 20px 40px;
+    background-color: rgb(139, 250, 139);
+    color: rgb(0, 0, 0);
+}
+.err-msg button,.done-msg button{
+    background:white;
+    position: absolute;
+    padding: 2px;
+    border-radius: 50%;
+    border: none;
+    right: 20px;
+    color: white;
+    cursor: pointer;
+  
+  }
 .header{
     height: 70px;
     background-color: white;
