--- a/views/clubs/index.pug
+++ b/views/clubs/index.pug
@@ -25,8 +25,8 @@ html(lang="en")
             .dropdown 
                 div.account.drop-btn 
                 div.dropdown-content 
-                    a.dropdown-item(href="users/account") Account 
-                    a.dropdown-item(href="users/account/setting") Setting 
+                    a.dropdown-item(href="/users/account") Account 
+                    a.dropdown-item(href="/users/account/setting") Setting 
                     a.dropdown-item(href="/logout") Logout 
                     if user.role == "Teacher"
                         a.dropdown-item(href="/admin") Administration 
@@ -46,7 +46,7 @@ html(lang="en")
                                 div.info 
                                     div.member= `${club.members.length} Members`
                             div.tag= club.tag
-                            a(class="btn btn-join" href=`clubs/${club._id}`)
+                            a(class="btn btn-join" href=`clubs/${club.slug}`)
                                 | View
                 
 
