prn can't update feature added

--- a/views/profile/account.pug
+++ b/views/profile/account.pug
@@ -45,7 +45,7 @@ html(lang="en")
                                 input(type="email" name="email" placeholder="Enter your college email" required value=`${user.email}`) 
                             div.input-box
                                 label(for="prn")
-                                input(type="number" name="prn" placeholder="Enter your PRN" required value=`${user.prn}`) 
+                                input(type="number" name="prn" placeholder="Enter your PRN" required value=`${user.prn}` class="not-edit" readonly) 
                             div.input-box
                                 label(for="m_no")
                                 input(type="number" name="mobile_number" placeholder="Enter your Phone Number" required value=`${user.mobile_number}`) 
