--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -11,25 +11,26 @@ html(lang="en")
             include ./../../public/css/header.css
     body 
         header.header 
-            img(src="Logo.png", alt="Logo" class="logo")
+            img(src="../Logo.png", alt="Logo" class="logo")
             nav 
                 ul 
                     li 
                         a(href="/clubs") Home 
                     li
-                        a(href="/clubs/my") My Clubs
+                        a(href="/clubs/my") My Clubs 
                     if user.role == "Teacher" 
                         li
                             a(href="/admin/new") Create Club 
             div.msg=`Welcome ${user.full_name}`
             .dropdown 
-                div.account.drop-btn 
+                img(src="../assets/avatar/1.png", alt="Profile Avatar" class="account")
+                div.drop-btn                
                 div.dropdown-content 
                     a.dropdown-item(href="/users/account") Account 
                     a.dropdown-item(href="/users/account/setting") Setting 
                     a.dropdown-item(href="/logout") Logout 
                     if user.role == "Teacher"
-                        a.dropdown-item(href="/admin") Administration 
+                        a.dropdown-item(href="/admin") Administration                  
         section.head
             h1 Administrator Dashboard
         main 
