--- a/views/clubs/index.pug
+++ b/views/clubs/index.pug
@@ -11,7 +11,7 @@ html(lang="en")
             include ./../../public/css/header.css
     body 
         header.header 
-            img(src="Logo.png", alt="Logo" class="logo")
+            img(src="../Logo.png", alt="Logo" class="logo")
             nav 
                 ul 
                     li 
@@ -23,13 +23,14 @@ html(lang="en")
                             a(href="/admin/new") Create Club 
             div.msg=`Welcome ${user.full_name}`
             .dropdown 
-                div.account.drop-btn 
+                img(src="../assets/avatar/1.png", alt="Profile Avatar" class="account")
+                div.drop-btn                
                 div.dropdown-content 
                     a.dropdown-item(href="/users/account") Account 
                     a.dropdown-item(href="/users/account/setting") Setting 
                     a.dropdown-item(href="/logout") Logout 
                     if user.role == "Teacher"
-                        a.dropdown-item(href="/admin") Administration 
+                        a.dropdown-item(href="/admin") Administration                 
         section.head
             h1 MITAOE Club Home Page
         main 
@@ -50,5 +51,4 @@ html(lang="en")
                                 | View
                 
 
-        footer.footer
-            h3 Copyright &copy; MITAOE
+        include ../_footer.pug
