--- a/views/profile/view.pug
+++ b/views/profile/view.pug
@@ -23,13 +23,14 @@ html(lang="en")
                             a(href="/admin/new") Create Club 
             div.msg=`Welcome ${user.full_name}`
             .dropdown 
-                div.account.drop-btn 
+                img(src="../assets/avatar/1.png", alt="Profile Avatar" class="account")
+                div.drop-btn                
                 div.dropdown-content 
                     a.dropdown-item(href="/users/account") Account 
                     a.dropdown-item(href="/users/account/setting") Setting 
                     a.dropdown-item(href="/logout") Logout 
                     if user.role == "Teacher"
-                        a.dropdown-item(href="/admin") Administration 
+                        a.dropdown-item(href="/admin") Administration                 
         section.head
             h1= User.full_name 
         main 
